--- a/pom.xml
+++ b/pom.xml
@@ -38,5 +38,10 @@
             <artifactId>lombok</artifactId>
             <version>1.18.12</version>
         </dependency>
+        <dependency>
+            <groupId>org.netbeans.external</groupId>
+            <artifactId>AbsoluteLayout</artifactId>
+            <version>RELEASE122</version>
+        </dependency>
     </dependencies>
 </project>
