--- a/pom.xml
+++ b/pom.xml
@@ -43,5 +43,15 @@
             <artifactId>AbsoluteLayout</artifactId>
             <version>RELEASE122</version>
         </dependency>
+        <dependency>
+            <groupId>jfree</groupId>
+            <artifactId>jfreechart</artifactId>
+            <version>1.0.13</version>
+        </dependency>
+        <dependency>
+            <groupId>jfree</groupId>
+            <artifactId>jcommon</artifactId>
+            <version>1.0.16</version>
+        </dependency>
     </dependencies>
 </project>
